syntax="proto3";
package internal_proto;

//游戏服务器注册到网管服务
message Request_ConnectStruct{

}

//接收注册的消息
message Response_ConnectStruct{
    bool isConnected=1;
}

